--- a/자료구조 인프런/자료구조 인프런.vcxproj
+++ b/자료구조 인프런/자료구조 인프런.vcxproj
@@ -131,6 +131,7 @@
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
     <ClCompile Include="Phonebook02.cpp" />
+    <ClCompile Include="Phonebook03.cpp" />
     <ClCompile Include="연습1.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
