--- a/자료구조 인프런/자료구조 인프런.vcxproj.filters
+++ b/자료구조 인프런/자료구조 인프런.vcxproj.filters
@@ -33,5 +33,8 @@
     <ClCompile Include="Phonebook02.cpp">
       <Filter>소스 파일\2_Phonebook</Filter>
     </ClCompile>
+    <ClCompile Include="Phonebook03.cpp">
+      <Filter>소스 파일\2_Phonebook</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
