--- a/자료구조 인프런/자료구조 인프런.vcxproj.filters
+++ b/자료구조 인프런/자료구조 인프런.vcxproj.filters
@@ -42,13 +42,16 @@
     <ClCompile Include="Phonebook03(승제).cpp">
       <Filter>소스 파일\2_Phonebook</Filter>
     </ClCompile>
-    <ClCompile Include="Phonebook03(민주).cpp">
-      <Filter>소스 파일\2_Phonebook</Filter>
-    </ClCompile>
     <ClCompile Include="Phonebook03(지안).cpp">
       <Filter>소스 파일\2_Phonebook</Filter>
     </ClCompile>
+    <ClCompile Include="Phonebook03(민주).cpp">
+      <Filter>소스 파일\2_Phonebook</Filter>
+    </ClCompile>
     <ClCompile Include="Phonebook03(새진).cpp">
+      <Filter>소스 파일\2_Phonebook</Filter>
+    </ClCompile>
+    <ClCompile Include="Phonebook04.cpp">
       <Filter>소스 파일\2_Phonebook</Filter>
     </ClCompile>
   </ItemGroup>
