--- a/자료구조 인프런/자료구조 인프런.vcxproj.filters
+++ b/자료구조 인프런/자료구조 인프런.vcxproj.filters
@@ -54,5 +54,14 @@
     <ClCompile Include="Phonebook04.cpp">
       <Filter>소스 파일\2_Phonebook</Filter>
     </ClCompile>
+    <ClCompile Include="Phonebook04(새진).cpp">
+      <Filter>소스 파일\2_Phonebook</Filter>
+    </ClCompile>
+    <ClCompile Include="Phonebook04(승제).cpp">
+      <Filter>소스 파일\2_Phonebook</Filter>
+    </ClCompile>
+    <ClCompile Include="Phonebook04(지안).cpp">
+      <Filter>소스 파일\2_Phonebook</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
